--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "a useful js tool kit",
   "main": "dist/main.umd.js",
   "module": "dist/main.esm.js",
+  "typings": "dist/types/modules/index.d.ts",
   "scripts": {
-    "build": "rollup --config",
-    "test": "jest --no-cache"
+    "build": "rollup --config && npm run docs",
+    "test": "jest --no-cache",
+    "docs": "typedoc --options typedoc.json"
   },
   "author": "wliang",
   "license": "ISC",
@@ -21,9 +23,11 @@
     "@types/jest": "^28.1.6",
     "jest": "^28.1.3",
     "rollup": "^2.77.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.32.1",
     "ts-jest": "^28.0.7",
     "tslib": "^2.4.0",
+    "typedoc": "^0.23.8",
+    "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "^4.7.4"
   }
 }
