--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "toolset"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/jest": "^28.1.6",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "rollup": "^2.77.0",
     "rollup-plugin-typescript2": "^0.32.1",
@@ -29,5 +32,10 @@
     "typedoc": "^0.23.8",
     "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "^4.7.4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
