--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepare": "husky install",
     "build": "rollup --config && npm run docs",
     "test": "jest --no-cache",
-    "docs": "typedoc --options typedoc.json"
+    "docs": "typedoc --options typedoc.json",
+    "release": "standard-version --release-as"
   },
   "author": "wliang",
   "license": "ISC",
@@ -33,6 +34,7 @@
     "jest": "^28.1.3",
     "rollup": "^2.77.0",
     "rollup-plugin-typescript2": "^0.32.1",
+    "standard-version": "^9.5.0",
     "ts-jest": "^28.0.7",
     "tslib": "^2.4.0",
     "typedoc": "^0.23.8",
