--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "rollup": "^2.77.0",
     "rollup-plugin-typescript2": "^0.32.1",
     "standard-version": "^9.5.0",
