--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "typings": "dist/types/modules/index.d.ts",
   "scripts": {
     "prepare": "husky install",
-    "build": "rollup --config && npm run docs",
+    "build": "rollup --config",
     "test": "jest --no-cache",
     "docs": "typedoc --options typedoc.json",
-    "release": "npm run test && npm run build && standard-version --release-as"
+    "release": "standard-version --release-as"
   },
   "author": "wliang",
   "license": "ISC",
